# rsmc

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  todo.sh
.cargo/: config.toml
.github/workflows/: ci.yml
assets/shaders/: my_material.wgsl
src/: lib.rs
src/client/: main.rs  prelude.rs  scene.rs  states.rs
src/client/chat/: events.rs  mod.rs  systems.rs
src/client/collider/: events.rs  mod.rs  systems.rs
src/client/gui/: mod.rs  systems.rs
src/client/networking/: commands.rs  mod.rs  systems.rs
src/client/player/: events.rs  mod.rs  resources.rs
src/client/player/systems/: controller.rs  keyboard.rs  mouse.rs  network.rs  selection.rs  terrain.rs
src/client/remote_player/: components.rs  events.rs  mod.rs  systems.rs
src/client/terrain/: events.rs  materials.rs  mod.rs  resources.rs  systems.rs
src/client/terrain/util/: blocks.rs  cross_mesher.rs  cube_mesher.rs  mesher.rs
src/server/: main.rs  prelude.rs
src/server/chat/: events.rs  mod.rs  systems.rs
src/server/gui/: mod.rs  systems.rs
src/server/networking/: mod.rs  resources.rs  systems.rs
src/server/player/: resources.rs  systems.rs
src/server/terrain/: commands.rs  events.rs  mod.rs  persistence.rs  resources.rs  systems.rs
src/server/terrain/util/: generator.rs
src/shared/: blocks.rs  chunk_serializer.rs  mod.rs  networking.rs  terrain.rs
src/shared/chunk/: chunk.rs  chunk_data.rs  constants.rs  manager.rs  mod.rs  other.rs
