[package]
name = "rsmc"
version = "0.1.1"
edition = "2021"
rust-version = "1.90.0"

[dependencies]
bevy = "0.16.1"
bevy_fps_controller = {version = "16.1.0", features = ["rapier"]}
bevy_rapier3d = {version ="0.30.0", features = ["simd-stable", "debug-render-3d", "dim3"]}
cgmath = "0.18.0"
iyes_perf_ui = "0.5.0"
noise = "0.9.0"
bevy_renet = "2.0.1"
bincode = "1.3.3"
rand = {version = "0.9.0", features = ["small_rng"]}
renet = "1.1.0"
serde = { version = "1.0.203", features = ["derive"] }
serde-big-array = "0.5.1"
chrono = "0.4.38"
rayon = "1.10.0"
bevy_flair = "0.4.0"
bevy_egui = "0.36.0"
bevy_diagnostic = "0.16.1"
bevy-inspector-egui = {version = "0.33", features = ["bevy_render"]}
renet_visualizer = "1.0.0"
egui_plot = "0.30.0"

[profile.dev.package."*"]
opt-level = 3

[profile.dev.package.objc2]
debug-assertions = false

[profile.release]
opt-level = 3

[[bin]]
name = "client"
path = "src/client/main.rs"

[[bin]]
name = "server"
path = "src/server/main.rs"

[features]
default = ["chat"]
dynamic_linking = ["bevy/dynamic_linking"]

# both
chat = ["dynamic_linking"]

# server
renet_visualizer = ["egui_layer"]
generator_visualizer = ["egui_layer"]
egui_layer = []
skip_chunk_padding = []

# client
wireframe = []
debug_ui = []
ortho_camera = []
lock_player = []
physics_debug = []
raycast_debug = []
skip_terrain = []
visual_debug = ["wireframe", "physics_debug", "raycast_debug"]
